--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,58 @@
-.App {
-  text-align: center;
+.d-none {
+  display: none;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.slider {
+  position: relative;
+  height: 40vh;
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  margin-top: 80px;
 }
 
-.App-link {
-  color: #61dafb;
+.image {
+  width: 1500px;
+  height: 400px;
+  border-radius: 10px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.right-arrow {
+  position: absolute;
+  top: 40%;
+  right: 120px;
+  font-size: 5rem;
+  color: rgb(145, 143, 143);
+  z-index: 10;
+  cursor: pointer;
+  user-select: none;
+  background-color: white;
+  border-radius: 50%;
+  background-size: 100px 100px;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+}
+
+.left-arrow {
+  position: absolute;
+  top: 40%;
+  left: 120px;
+  font-size: 5rem;
+  color: rgb(145, 143, 143);
+  z-index: 10;
+  background-color: white;
+  cursor: pointer;
+  user-select: none;
+  border-radius: 50%;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+}
+
+.slide {
+  opacity: 0;
+  transition-duration: 1s ease;
+}
+
+.slide.active {
+  opacity: 1;
+  transition-duration: 1s;
+  transform: scale(1.08);
 }
