--- a/src/App.css
+++ b/src/App.css
@@ -12,7 +12,7 @@
 }
 
 .image {
-  width: 1500px;
+  width: 70vw;
   height: 400px;
   border-radius: 10px;
 }
@@ -20,8 +20,8 @@
 .right-arrow {
   position: absolute;
   top: 40%;
-  right: 120px;
-  font-size: 5rem;
+  right: 190px;
+  font-size: 4rem;
   color: rgb(145, 143, 143);
   z-index: 10;
   cursor: pointer;
@@ -35,8 +35,8 @@
 .left-arrow {
   position: absolute;
   top: 40%;
-  left: 120px;
-  font-size: 5rem;
+  left: 190px;
+  font-size: 4rem;
   color: rgb(145, 143, 143);
   z-index: 10;
   background-color: white;
